[denis] refactoring